# CYD-Hurricane-Tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  error_image.c  http_client.c  idf_component.yml  lcd_init.c  main.c  time_sync.c  touch_init.c  wifi_manager.c  xml_parse.c
main/include/: app_config.h  http_client.h  lcd_init.h  time_sync.h  touch_init.h  wifi_manager.h  xml_parse.h
